--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@1,8..144,700&display=swap"
+      rel="stylesheet"
+    />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -37,7 +44,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
 
-    <title>Backroads App</title>
+    <title>La Nueva Novedad</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
